<?xml version="1.0"?>
<package format="2">
  <name>ma_rrt_path_plan</name>
  <version>1.1.0</version>
  <description>The ma_rrt_path_plan package</description>

  <maintainer email="maxim.yastremsky@egnition-hamburg.de">Maxim Yastremsky</maintainer>
  <maintainer email="boing0806@gmail.com">Jeong Boin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vehicle_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  </export>
</package>
